Changement interface champ disponibilite D?but des listeners

--- a/candidate crawler/.settings/org.eclipse.core.resources.prefs
+++ b/candidate crawler/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//candidatecrawler/view/Ponctual.py=utf-8
 encoding//candidatecrawler/view/window/About_window.py=utf-8
+encoding//candidatecrawler/view/window/Admin_window.py=utf-8
