Connexion interface crawler

--- a/candidate crawler/.settings/org.eclipse.core.resources.prefs
+++ b/candidate crawler/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,7 @@
 eclipse.preferences.version=1
+encoding//candidatecrawler/core/core.py=utf-8
+encoding//candidatecrawler/crawler/LancementSpider.py=utf-8
+encoding//candidatecrawler/crawler/apecSelenium.py=utf-8
 encoding//candidatecrawler/view/Ponctual.py=utf-8
 encoding//candidatecrawler/view/window/About_window.py=utf-8
 encoding//candidatecrawler/view/window/Admin_window.py=utf-8
