--- a/job crawler/config.ini
+++ b/job crawler/config.ini
@@ -1,4 +1,9 @@
 [GENERAL]
 dbfile = /home/guillaume/Bureau/database.csv
+profilespath = ./predefined_searches
 excludes = interim,intérim,commercial
+
+[STATIC]
+regions = Toute la France,Alsace,Aquitaine,Auvergne,Basse-Normandie,Bourgogne,Bretagne,Centre,Champagne-Ardenne,Franche-Comté,Haute-Normandie,Ile-de-France,Languedoc-Roussillon,Limousin,Lorraine,Midi-Pyrénées,Nord-Pas-de-Calais,Pays de la Loire,Picardie,Poitou-Charentes,PACA,Rhône-Alpes
+domains = Engineering,Info-Hardware,Info-Helpdesk,Info-Software
 
