Commit new version

--- a/job crawler/config.ini
+++ b/job crawler/config.ini
@@ -1,5 +1,5 @@
 [GENERAL]
-dbfile = /home/guillaume/Bureau/database.csv
+dbfile = C:/Users/Guillaume/Desktop/database.csv
 profilespath = ./predefined_searches
 excludes = interim,intérim,commercial
 
